Layout adjustments and forms

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,12 +6,12 @@
     <mat-toolbar color="primary">Menu</mat-toolbar>
 
     <mat-nav-list (click)="closeSideNav()">
-      <a mat-list-item [routerLink]="['/filmes']">
+      <a mat-list-item [routerLink]="['/movies']">
         <mat-icon class="icon">home</mat-icon>
         Home
       </a>
       <mat-divider></mat-divider>
-      <a mat-list-item [routerLink]="['/filmes/cadastro']">
+      <a mat-list-item [routerLink]="['/movies/new']">
         <mat-icon class="icon">movie_creation</mat-icon>
         Register new movie</a
       >
