--- a/src/app/movies/register-movies/register-movies.component.html
+++ b/src/app/movies/register-movies/register-movies.component.html
@@ -1,1 +1,27 @@
-<p>register-movies works!</p>
+<mat-toolbar class="app-title">Register movie</mat-toolbar>
+<div class="main-div">
+  <mat-card class="center width50">
+    <form
+      autocomplete="off"
+      novalidate
+      [formGroup]="formRegister"
+      (ngSubmit)="onSubmit()"
+      (ngReset)="onResetForm()"
+    >
+      <mat-card-content>
+        <mat-form-field class="full-width">
+          <input
+            matInput
+            placeholder="Title"
+            name="title"
+            formControlName="title"
+          />
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button type="submit" color="accent" mat-raised-button>Save</button>
+        <button type="reset" color="warn" mat-raised-button>Cancel</button>
+      </mat-card-actions>
+    </form>
+  </mat-card>
+</div>
