--- a/src/app/movies/register-movies/register-movies.component.html
+++ b/src/app/movies/register-movies/register-movies.component.html
@@ -16,8 +16,18 @@
             name="title"
             formControlName="title"
           />
+          <mat-error *ngIf="validate.hasErrorValidate(f.title, 'required')"
+            >Required field</mat-error
+          >
+          <mat-error *ngIf="validate.hasErrorValidate(f.title, 'minlength')"
+            >The field must be at least 2 characters</mat-error
+          >
+          <mat-error *ngIf="validate.hasErrorValidate(f.title, 'maxlength')"
+            >The field can be a maximum of 80 characters</mat-error
+          >
         </mat-form-field>
       </mat-card-content>
+
       <mat-card-actions>
         <button type="submit" color="accent" mat-raised-button>Save</button>
         <button type="reset" color="warn" mat-raised-button>Cancel</button>
