Error validation service changed to be dynamic

--- a/src/app/shared/ui/input-text/input-text.component.html
+++ b/src/app/shared/ui/input-text/input-text.component.html
@@ -1,1 +1,24 @@
-<p>input-text works!</p>
+<div [formGroup]="formGroup">
+  <mat-form-field class="full-width">
+    <input
+      matInput
+      [placeholder]="title"
+      [name]="controlName"
+      [formControlName]="controlName"
+    />
+
+    <mat-error *ngIf="validate.hasErrorValidate(formControl, 'required')"
+      >Required field</mat-error
+    >
+    <mat-error *ngIf="validate.hasErrorValidate(formControl, 'minlength')"
+      >The field must be at least
+      {{ validate.validateLength(formControl, "minlength") }}
+      characters</mat-error
+    >
+    <mat-error *ngIf="validate.hasErrorValidate(formControl, 'maxlength')"
+      >The field can be a maximum of
+      {{ validate.validateLength(formControl, "maxlength") }}
+      characters</mat-error
+    >
+  </mat-form-field>
+</div>
