--- a/src/app/movies/register-movies/register-movies.component.html
+++ b/src/app/movies/register-movies/register-movies.component.html
@@ -18,8 +18,8 @@
       </mat-card-content>
 
       <mat-card-actions>
-        <button type="submit" color="accent" mat-raised-button>Save</button>
         <button type="reset" color="warn" mat-raised-button>Cancel</button>
+        <button type="submit" color="primary" mat-raised-button>Save</button>
       </mat-card-actions>
     </form>
   </mat-card>
