--- a/src/app/shared/ui/input-text/input-text.component.html
+++ b/src/app/shared/ui/input-text/input-text.component.html
@@ -1,8 +1,8 @@
 <div [formGroup]="formGroup">
-  <mat-form-field class="full-width">
+  <mat-form-field appearance="outline" class="full-width">
+    <mat-label>Title</mat-label>
     <input
       matInput
-      [placeholder]="title"
       [name]="controlName"
       [formControlName]="controlName"
     />
