Added component and listing service

--- a/src/app/movies/list-movies/list-movies.component.html
+++ b/src/app/movies/list-movies/list-movies.component.html
@@ -9,14 +9,18 @@
       <mat-card-subtitle>Check this Home</mat-card-subtitle>
     </mat-card-header>
 
-    <img mat-card-image src="../assets/img/angular-cli.png" alt="Angular CLI">
+    <img mat-card-image src="../assets/img/angular-cli.png" alt="Angular CLI" />
 
     <mat-card-content>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, dignissimos nemo illum, fuga, nesciunt deleniti culpa quaerat impedit ex nostrum consequatur eius?</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
+        dignissimos nemo illum, fuga, nesciunt deleniti culpa quaerat impedit ex
+        nostrum consequatur eius?
+      </p>
     </mat-card-content>
 
     <mat-card-actions>
-        <button color="warn" mat-raised-mat-stroked-button>Open</button>
+      <button color="warn" mat-raised-mat-stroked-button>Open</button>
     </mat-card-actions>
   </mat-card>
 </div>
