Corrections to text input

--- a/src/app/movies/register-movies/register-movies.component.html
+++ b/src/app/movies/register-movies/register-movies.component.html
@@ -11,7 +11,7 @@
       <mat-card-content>
         <!-- Title -->
         <app-input-text
-          title="Title"
+          label="Title"
           controlName="title"
           [formGroup]="formRegister"
         ></app-input-text>
