Movie list filter complete

--- a/src/app/movies/list-movies/list-movies.component.html
+++ b/src/app/movies/list-movies/list-movies.component.html
@@ -5,7 +5,7 @@
     <div class="width50">
       <app-input-text
         label="Search"
-        controlName="texto"
+        controlName="search"
         [formGroup]="formListing"
       ></app-input-text>
     </div>
