Template added without records

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,11 @@ body {
   padding: 10px;
 }
 
+.marginTop-padding {
+  padding: 20px;
+  margin-top: 40px;
+}
+
 .break-line {
   white-space: pre-line;
 }
