--- a/src/app/movies/list-movies/list-movies.component.html
+++ b/src/app/movies/list-movies/list-movies.component.html
@@ -12,7 +12,7 @@
   </form>
 </mat-card>
 
-<div class="home-content">
+<div class="home-content" *ngIf="movies.length; else noRecords">
   <mat-card class="home-card" *ngFor="let movie of movies">
     <mat-card-header>
       <div mat-card-avatar></div>
@@ -36,3 +36,9 @@
     </mat-card-actions>
   </mat-card>
 </div>
+
+<ng-template #noRecords>
+  <div class="main-div full-width marginTop-padding">
+    <h1>Nenhum registro encontrado!</h1>
+  </div>
+</ng-template>
