Refactoring the filter method

--- a/src/app/movies/list-movies/list-movies.component.html
+++ b/src/app/movies/list-movies/list-movies.component.html
@@ -12,7 +12,7 @@
   </form>
 </mat-card>
 
-<div class="home-content" *ngIf="movies.length; else noRecords">
+<div class="home-content" *ngIf="movies?.length; else noRecords">
   <mat-card class="home-card" *ngFor="let movie of movies">
     <mat-card-header>
       <div mat-card-avatar></div>
