Adjustments in cards

--- a/src/app/movies/list-movies/list-movies.component.scss
+++ b/src/app/movies/list-movies/list-movies.component.scss
@@ -15,8 +15,8 @@
 }
 
 .mat-card-image {
-  width: 200px;
-  height: auto;
+  width: 180px;
+  height: 180px;
   margin: auto;
   display: block;
 }
