--- a/src/app/movies/list-movies/list-movies.component.html
+++ b/src/app/movies/list-movies/list-movies.component.html
@@ -14,21 +14,15 @@
 
 <div class="home-content" *ngIf="movies?.length; else noRecords">
   <mat-card class="home-card" *ngFor="let movie of movies">
-    <mat-card-header>
-      <div mat-card-avatar></div>
-
+    <mat-card-header class="main-div">
       <mat-card-title>{{ movie.title }}</mat-card-title>
-      <mat-card-subtitle>Check this Home</mat-card-subtitle>
+      <mat-card-subtitle>{{ movie.genre }}</mat-card-subtitle>
     </mat-card-header>
 
-    <img mat-card-image src="../assets/img/angular-cli.png" alt="Angular CLI" />
+    <img mat-card-image [src]="movie.urlPhoto || noPhoto" />
 
     <mat-card-content>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-        dignissimos nemo illum, fuga, nesciunt deleniti culpa quaerat impedit ex
-        nostrum consequatur eius?
-      </p>
+      <p class="break-line">{{ movie.description || noDescription }}</p>
     </mat-card-content>
 
     <mat-card-actions>
