--- a/src/app/movies/list-movies/list-movies.component.scss
+++ b/src/app/movies/list-movies/list-movies.component.scss
@@ -4,14 +4,23 @@
   width: calc(100% - 20px);
   justify-content: space-between;
   padding: 10px;
+  margin-top: 135px;
 
   .home-card {
     margin-bottom: 10px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  }
+
+  .home-card:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   }
 }
 
 .filter-listing {
   width: calc(100% - 50px);
+  position: fixed;
+  z-index: 9999;
+  margin: 0 auto;
 }
 
 .mat-card-image {
@@ -19,6 +28,10 @@
   height: 180px;
   margin: auto;
   display: block;
+}
+
+.marginTop-padding {
+  margin-top: 180px;
 }
 
 @media screen and (min-width: 525px) {
