--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,11 @@
-<footer class="primary">
-  <div layout="row" layout-align="center center">
-    <h3>Rodapé do site</h3>
-  </div>
+<footer>
+  <h3>
+    Feito com ♥ por
+    <a
+      href="https://www.linkedin.com/in/PabloFerreiraB/"
+      title="Linkedin"
+      target="_blank"
+      >Pablo Ferreira</a
+    >
+  </h3>
 </footer>
