--- a/src/app/movies/register-edit-movies/register-edit-movies.component.scss
+++ b/src/app/movies/register-edit-movies/register-edit-movies.component.scss
@@ -2,4 +2,9 @@
   display: flex;
   padding: 20px 26px;
   background-color: #efefef;
+  margin-top: 62px;
+}
+
+.actions {
+  margin-bottom: 0 !important;
 }
