--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,7 +1,10 @@
-.primary {
-  color: white;
-  height: 46px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+footer {
+  color: #333;
+  text-align: center;
+  padding: 0.5rem 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  border-top: 1px solid #dcdcdc;
 }
