--- a/src/app/shared/ui/input-date/input-date.component.html
+++ b/src/app/shared/ui/input-date/input-date.component.html
@@ -6,11 +6,13 @@
       [matDatepicker]="picker"
       [name]="controlName"
       [formControlName]="controlName"
+      (click)="picker.open()"
     />
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+
     <mat-error *ngIf="validate.hasErrorValidate(formControl, 'required')"
       >Required field</mat-error
     >
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
 </div>
