Altered text ptBr to en

--- a/src/app/movies/list-movies/list-movies.component.html
+++ b/src/app/movies/list-movies/list-movies.component.html
@@ -40,6 +40,6 @@
 
 <ng-template #noRecords>
   <div class="main-div full-width marginTop-padding">
-    <h1>Nenhum registro encontrado!</h1>
+    <h1>No records found!</h1>
   </div>
 </ng-template>
