Form title changed

--- a/src/app/movies/register-edit-movies/register-edit-movies.component.html
+++ b/src/app/movies/register-edit-movies/register-edit-movies.component.html
@@ -1,4 +1,7 @@
-<mat-toolbar class="app-title">Register movie</mat-toolbar>
+<section class="section-title">
+  <h1 class="title">{{ title }}</h1>
+</section>
+
 <div class="main-div">
   <mat-card class="center width50">
     <form
