--- a/src/app/movies/register-edit-movies/register-edit-movies.component.scss
+++ b/src/app/movies/register-edit-movies/register-edit-movies.component.scss
@@ -1,8 +1,13 @@
-.app-title {
-  display: flex;
-  padding: 20px 26px;
-  background-color: #efefef;
-  margin-top: 62px;
+.section-title {
+  margin-top: 100px;
+}
+
+.title {
+  text-align: center;
+  color: #444;
+  font-size: 2em;
+  font-weight: bold;
+  letter-spacing: 0.1em;
 }
 
 .actions {
